docker compose update
