# app/models/token_model.go
@@ -4,3 +4,8 @@ package models
 type Renew struct {
 	RefreshToken string `json:"refresh_token"`
 }
+
+type Tokens struct {
+	access  string `json:"access_token"`
+	refresh string `json:"refresh_token"`
+}
